# tests_lk

./: README.md  docker-compose.test.yml  requirements.txt  select_country.py
tests/: .behaverc  Dockerfile  pyproject.toml
tests/acceptance/: environment.py  test.py
tests/acceptance/features/: citizenship.feature  forgot_password.feature  login.feature  registration.feature
tests/acceptance/steps/: common_functions.py  given_user.py  then_alert.py  then_redirected.py  then_speciality.py  when_check.py  when_click.py  when_fill.py  when_select.py  when_speciality.py  when_visit.py
tests/acceptance/steps/utils/form/: __init__.py
tests/acceptance/steps/utils/mailbox/: __init__.py
tests/acceptance/steps/utils/users/: applicant.py  password_reset_user.py  unconfirmed_user.py  user.py
