[tool.poetry]
name = "tests"
version = "0.1.0"
description = "folder for tests"
authors = ["Sergey Polyakov <PolyakovSV@mai.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
behave = "^1.2.6"
selenium = "^4.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
